--- a/package.json
+++ b/package.json
@@ -1,10 +1,28 @@
 {
-  "name": "${PROJECT_NAME}",
+  "name": "aljazeera-automation",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf output reports",
+    "test": "npx codeceptjs run --plugins allure",
+    "report:generate": "npx allure generate output --clean -o reports",
+    "report:open": "npx allure open reports"
   },
-  "private": true
+  "private": true,
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "@codeceptjs/allure-legacy": "^1.0.2",
+    "@wdio/cli": "^9.14.0",
+    "@wdio/selenium-standalone-service": "^8.14.0",
+    "allure-commandline": "^2.34.0",
+    "codeceptjs": "^3.7.3",
+    "codeceptjs-cucumber": "^5.0.0",
+    "webdriverio": "^9.14.0"
+  },
+  "dependencies": {
+    "@codeceptjs/configure": "^1.0.4"
+  }
 }
